--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "eslint --ext js,jsx,ts,tsx --fix"
   },
   "dependencies": {
+    "@types/next-redux-wrapper": "^3.0.0",
+    "@types/react-redux": "^7.1.16",
     "@types/styled-components": "^5.1.7",
     "eslint": "^7.21.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "next": "10.0.8",
+    "next-redux-wrapper": "^6.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "sass": "^1.32.8",
     "styled-components": "^5.2.1",
     "styled-reset": "^4.3.4"
@@ -27,6 +33,7 @@
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
     "eslint-plugin-react": "^7.22.0",
+    "redux-devtools-extension": "^2.13.9",
     "typescript": "^4.2.3"
   }
 }
