--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/next-redux-wrapper": "^3.0.0",
     "@types/react-redux": "^7.1.16",
     "@types/styled-components": "^5.1.7",
+    "axios": "^0.21.1",
     "eslint": "^7.21.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react-hooks": "^4.2.0",
